# CrimesDB

./: .gitignore  Dockerfile  README.md  create_superuser.py  docker-compose.yml  main.py  pyproject.toml  wait_for_db.py
.github/: copilot-instructions.md
.github/prompts/: roadmap.prompt.md
crimes/: admin.py  apps.py  models.py  permissions.py  queries.py  serializers.py  services.py  signals.py  tests.py  views.py
crimes/management/commands/: generate_demo_data.py  refresh_case_counts.py
crimes/migrations/: 0001_initial.py  0002_case_case_status_idx_evidence_evidence_case_idx.py  0003_view_case_summary.py
crimes/templates/admin/crimes/incident/: change_list.html
criminal/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  case_detail.html  case_list.html  dashboard.html  home.html  incident_detail.html  incident_form.html  incidents_list.html  person_detail.html  person_form.html  person_list.html  reports_case_summary.html
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py
users/templates/admin/users/user/: change_list.html
